application-获取账户信息接口更改为post请求
