# application/routers/api/v1/account.go
@@ -9,28 +9,49 @@ package v1
 import (
 	"bytes"
 	"encoding/json"
+	"fmt"
 	"github.com/gin-gonic/gin"
 	bc "github.com/togettoyou/blockchain-real-estate/application/blockchain"
 	"github.com/togettoyou/blockchain-real-estate/application/pkg/app"
 	"net/http"
 )
 
+type AccountIdBody struct {
+	AccountId string `json:"accountId"`
+}
+
+type AccountRequestBody struct {
+	Args []AccountIdBody `json:"args"`
+}
+
 // @Summary 获取账户信息
+// @Param account body AccountRequestBody true "account"
 // @Produce  json
 // @Success 200 {object} app.Response
 // @Failure 500 {object} app.Response
-// @Router /api/v1/queryAccountList [get]
+// @Router /api/v1/queryAccountList [post]
 func QueryAccountList(c *gin.Context) {
 	appG := app.Gin{C: c}
-	resp, err := bc.ChannelQuery("queryAccountList", [][]byte{})
+	body := new(AccountRequestBody)
+	//解析Body参数
+	if err := c.ShouldBind(body); err != nil {
+		appG.Response(http.StatusBadRequest, "失败", fmt.Sprintf("参数出错%s", err.Error()))
+		return
+	}
+	var bodyBytes [][]byte
+	for _, val := range body.Args {
+		bodyBytes = append(bodyBytes, []byte(val.AccountId))
+	}
+	//调用智能合约
+	resp, err := bc.ChannelQuery("queryAccountList", bodyBytes)
 	if err != nil {
-		c.String(http.StatusInternalServerError, err.Error())
+		appG.Response(http.StatusInternalServerError, "失败", err.Error())
 		return
 	}
 	// 反序列化json
 	var data []map[string]interface{}
 	if err = json.Unmarshal(bytes.NewBuffer(resp.Payload).Bytes(), &data); err != nil {
-		c.String(http.StatusInternalServerError, err.Error())
+		appG.Response(http.StatusInternalServerError, "失败", err.Error())
 		return
 	}
 	appG.Response(http.StatusOK, "成功", data)
