# chaincode/blockchain-real-estate/lib/type.go
@@ -8,9 +8,9 @@ package lib
 
 //账户，虚拟管理员和若干业主账号
 type Account struct {
-	AccountId string  `json:"accountId "` //账号ID
-	UserName  string  `json:"userName"`   //账号名
-	Balance   float64 `json:"balance"`    //余额
+	AccountId string  `json:"accountId"` //账号ID
+	UserName  string  `json:"userName"`  //账号名
+	Balance   float64 `json:"balance"`   //余额
 }
 
 //房地产作为担保出售、捐赠或质押时Encumbrance为true，默认状态false。
